[ENH] List screen supports offline as well as sync operations. StorIO used for db persistence

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -14,6 +14,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="LinearLayoutManager"
+            android:scrollbars="vertical"
             tools:listitem="@layout/post_item"
             tools:context="com.karntrehan.posts.list.ListActivity" />
     </android.support.v4.widget.SwipeRefreshLayout>
