--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="card_margin">5dp</dimen>
     <dimen name="def_small_margin">4dp</dimen>
     <dimen name="card_padding">4dp</dimen>
+    <dimen name="def_small_avatar_size">24dp</dimen>
 </resources>
